@@ -16,4 +16,5 @@ def register():
         TemplateSupplierTax,
         Product,
         Configuration,
+        ProductConfiguration,
         module='account_product', type_='model')
