@@ -8,5 +8,11 @@ this repository contains the full copyright notices and license terms. -->
             <field name="inherit" ref="account.configuration_view_form"/>
             <field name="name">configuration_form</field>
         </record>
+
+        <record model="ir.ui.view" id="product_configuration_view_form">
+            <field name="model">product.configuration</field>
+            <field name="inherit" ref="product.product_configuration_view_form"/>
+            <field name="name">product_configuration_form</field>
+        </record>
     </data>
 </tryton>
