@@ -1,0 +1,12 @@
+<?xml version="1.0"?>
+<!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
+this repository contains the full copyright notices and license terms. -->
+<data>
+    <xpath expr="/form" position="inside">
+        <newline/>
+        <label name="default_account_category"/>
+        <field name="default_account_category"/>
+        <label name="default_taxes_category"/>
+        <field name="default_taxes_category"/>
+    </xpath>
+</data>
