@@ -1,3 +1,5 @@
+* Add configuration for default use category's accounts and taxes
+
 Version 3.8.0 - 2015-11-02
 * Bug fixes (see mercurial logs for details)
 * Add default revenue/expense configuration
